--- a/index.html
+++ b/index.html
@@ -13093,7 +13093,7 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Results">Results<a class="anchor-link" href="#Results">&#182;</a></h2><h3 id="System-sizes">System sizes<a class="anchor-link" href="#System-sizes">&#182;</a></h3><p>To get a broad overview of the data we can look at the entire distribution of system sizes over the total time period, from 2008 to 2020, and how the different types of systems compare.</p>
-<p>{% include system_size_scatter.html %}</p>
+<p><img src="system_size_scatter.html" alt="Test image"></p>
 
 </div>
 </div>
